syntax = "proto3";

package user;

option go_package = "task_service/proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse); // rpc method to get a user's details by their ID.
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
}
